load("//bazel:api.bzl", "modular_py_binary")

modular_py_binary(
    name = "main",
    srcs = [
        "main.py",
        "mlp.py",
    ],
    imports = ["."],
    deps = [
        "//SDK/lib/API/python/max/entrypoints",
        "//SDK/lib/API/python/max/entrypoints:pipelines",
        "//SDK/lib/API/python/max/nn",
    ],
)
